Replace fmt and lint scripts with a check script
Biome supports running both formatting and linting in a single command,
so we can simplify the scripts, replacing separate fmt and lint scripts
with a single check script.

This will also start executing the code assists (import sorting) as they
only run when `biome check` is executed.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "test:e2e": "turbo test:e2e",
     "test:type": "turbo build:type",
     "test:test-type": "turbo test:test-type",
-    "fmt": "turbo fmt",
-    "lint": "turbo lint",
-    "format": "biome format --write",
+    "check": "turbo check",
+    "check:all": "biome check --write",
     "postinstall": "husky"
   },
   "devDependencies": {
