--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -17,8 +17,7 @@
   "scripts": {
     "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist/types",
     "release-build": "yarn build && yarn build:type",
-    "fmt": "biome format --write",
-    "lint": "biome lint --write",
+    "check": "biome check --write",
     "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
     "build-message": "swc src/generateMessage.ts --strip-leading-paths -C sourceMaps=false --out-dir ../../scripts",
     "bench": "node dist/index.js"
