--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -1,5 +1,6 @@
 name: Docker App - Rest Passthrough
-
+permissions:
+  contents: read
 on:
   push:
     branches:
@@ -50,6 +51,9 @@ jobs:
     name: Build docker image
     runs-on: ubuntu-latest
     needs: app-version
+    permissions:
+      contents: read
+      actions: write
     steps:
       - uses: actions/checkout@v4
       - name: Cache Docker layers
@@ -90,6 +94,10 @@ jobs:
     name: Image scan
     runs-on: ubuntu-latest
     needs: build
+    permissions: 
+      contents: read
+      security-events: write
+      actions: read
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
