--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -1,5 +1,6 @@
 name: Deploy Docs Site
-
+permissions:
+  contents: read
 on:
   push:
     branches: ['main']
@@ -12,15 +13,13 @@ on:
   pull_request:
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
   build:
     name: Build Docusaurus
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -81,6 +80,9 @@ jobs:
     needs: build
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     concurrency: deploy-site
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
