--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discordeno-monorepo",
-  "version": "21.0.0",
+  "version": "22.0.0-beta.1",
   "private": true,
   "type": "module",
   "packageManager": "yarn@4.6.0",
