--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,11 +1,10 @@
 *                          @discordeno/team
 
 /.github/CODEOWNERS        @Skillz4Killz @itohatweb
-/.github/workflows/        @H01001000 @Skillz4Killz
-/.github/sync.yml          @H01001000 @Skillz4Killz
-/.yarn/                    @H01001000 @Skillz4Killz
-/.yarnrc.yml               @H01001000 @Skillz4Killz
-/codecov.yml               @H01001000 @Skillz4Killz
-/packages/*/package.json   @H01001000 @Skillz4Killz
-/package.json              @H01001000 @Skillz4Killz
-/turbo.json                @H01001000 @Skillz4Killz
+/.github/workflows/        @H01001000 @Skillz4Killz @discordeno/team
+/.yarn/                    @H01001000 @Skillz4Killz @discordeno/team
+/.yarnrc.yml               @H01001000 @Skillz4Killz @discordeno/team
+/codecov.yml               @H01001000 @Skillz4Killz @discordeno/team
+/packages/*/package.json   @H01001000 @Skillz4Killz @discordeno/team
+/package.json              @H01001000 @Skillz4Killz @discordeno/team
+/turbo.json                @H01001000 @Skillz4Killz @discordeno/team
