--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -2,12 +2,7 @@
   "name": "benchmarks",
   "version": "0.0.0",
   "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/types/index.d.ts",
-  "exports": {
-    "import": "./dist/index.js",
-    "types": "./dist/types/index.d.ts"
-  },
+  "exports": "./dist/index.js",
   "type": "module",
   "license": "Apache-2.0",
   "repository": {
@@ -15,10 +10,10 @@
     "url": "git+https://github.com/discordeno/discordeno.git"
   },
   "scripts": {
-    "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist/types",
+    "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
+    "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist",
     "release-build": "yarn build && yarn build:type",
     "check": "biome check --write",
-    "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
     "build-message": "swc src/generateMessage.ts --strip-leading-paths -C sourceMaps=false --out-dir ../../scripts",
     "bench": "node dist/index.js"
   },
