--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordeno/gateway",
-  "version": "21.0.0",
+  "version": "22.0.0-beta.1",
   "exports": "./dist/index.js",
   "type": "module",
   "license": "Apache-2.0",
