add back --access public --provenance

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,6 @@ jobs:
 
       # If the action is running from a release, if prerelease use beta tag else use latest tag, otherwise use the next tag
       - run: npm publish package.tgz --tag ${{ github.event_name == 'release' && github.event.action == 'published' && (github.event.release.prerelease && 'beta' || 'latest') || 'next' }}
-        working-directory: packages/${{ matrix.package }}
+        working-directory: packages/${{ matrix.package }} --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
