refactor(typedoc): update typedoc configuration and mark internal APIs as private
The typedoc config is now only in the top-level config file instead of also being one per package
and all internal APIs are now marked as private so typedoc won't generate documentation for them, however we still need to export them to avoid typedoc warnings

The new internal APIs that are exported, since are marked as `@private` can have breaking changes without notices

--- a/typedoc.jsonc
+++ b/typedoc.jsonc
@@ -2,6 +2,10 @@
   "$schema": "https://typedoc.org/schema.json",
   "entryPointStrategy": "packages",
   "entryPoints": ["packages/bot", "packages/gateway", "packages/rest", "packages/types", "packages/utils"],
+  "packageOptions": {
+    "entryPoints": ["./src/index.ts"],
+    "exclude": ["**/dist/**/*"]
+  },
   "out": "./website/api_reference/generated",
   "readme": "./website/api_reference/generated/_media/README.md",
   "cleanOutputDir": false,
