--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -94,6 +94,7 @@ jobs:
     name: Image scan
     runs-on: ubuntu-latest
     needs: build
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
     permissions: 
       contents: read
       security-events: write
