--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -41,7 +41,7 @@
     "@types/node": "^24.3.0",
     "c8": "^10.1.3",
     "chai": "^6.0.1",
-    "mocha": "patch:mocha@npm%3A11.0.2#~/.yarn/patches/mocha-npm-11.0.2-b5d6b95284.patch",
+    "mocha": "^11.7.2",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
     "typescript": "^5.9.2"
