--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -43,7 +43,7 @@
     "chai": "^6.0.1",
     "chai-as-promised": "^8.0.2",
     "dotenv": "^17.2.1",
-    "mocha": "patch:mocha@npm%3A11.0.2#~/.yarn/patches/mocha-npm-11.0.2-b5d6b95284.patch",
+    "mocha": "^11.7.2",
     "sinon": "^21.0.0",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
