--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -31,7 +31,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.3.0",
     "c8": "^10.1.3",
-    "mocha": "patch:mocha@npm%3A11.0.2#~/.yarn/patches/mocha-npm-11.0.2-b5d6b95284.patch",
+    "mocha": "^11.7.2",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
     "typescript": "^5.9.2"
