--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -38,7 +38,7 @@
     "@types/sinon": "^17.0.4",
     "c8": "^10.1.3",
     "chai": "^6.0.1",
-    "mocha": "patch:mocha@npm%3A11.0.2#~/.yarn/patches/mocha-npm-11.0.2-b5d6b95284.patch",
+    "mocha": "^11.7.2",
     "sinon": "^21.0.0",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
