--- a/docker-apps/rest-passthrough/package.json
+++ b/docker-apps/rest-passthrough/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "packageManager": "yarn@4.6.0",
   "scripts": {
-    "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
+    "build": "tsc",
     "start:dev": "yarn exec node -r dotenv/config dist/server.js",
     "start:prod": "yarn exec node ./dist/server.js",
     "release": "cliff-jumper"
@@ -19,8 +19,8 @@
   },
   "devDependencies": {
     "@favware/cliff-jumper": "^6.0.0",
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.13.5",
-    "dotenv": "^17.2.1"
+    "@types/node": "^24.3.1",
+    "dotenv": "^17.2.1",
+    "typescript": "^5.9.2"
   }
 }
