--- a/website/package.json
+++ b/website/package.json
@@ -30,8 +30,7 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
-    "styled-components": "^6.1.19"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.2",
