--- a/website/package.json
+++ b/website/package.json
@@ -16,29 +16,27 @@
     "check": "biome check --write"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.8.1",
-    "@docusaurus/faster": "^3.8.1",
-    "@docusaurus/plugin-client-redirects": "^3.8.1",
-    "@docusaurus/plugin-content-docs": "^3.8.1",
-    "@docusaurus/preset-classic": "^3.8.1",
-    "@docusaurus/theme-common": "^3.8.1",
+    "@docusaurus/core": "^3.9.1",
+    "@docusaurus/faster": "^3.9.1",
+    "@docusaurus/plugin-client-redirects": "^3.9.1",
+    "@docusaurus/plugin-content-docs": "^3.9.1",
+    "@docusaurus/preset-classic": "^3.9.1",
+    "@docusaurus/theme-common": "^3.9.1",
     "@easyops-cn/docusaurus-search-local": "^0.52.1",
-    "@mdx-js/react": "^3.1.0",
-    "@xyflow/react": "^12.8.2",
-    "clsx": "^2.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@xyflow/react": "^12.8.6",
     "prism-react-renderer": "^2.4.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "styled-components": "^6.1.19"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
-    "@docusaurus/module-type-aliases": "^3.8.1",
-    "@docusaurus/tsconfig": "^3.8.1",
-    "@docusaurus/types": "^3.8.1",
-    "@types/react": "^19.1.10",
-    "typescript": "5.9.2",
-    "webpack": "5.101.2"
+    "@docusaurus/module-type-aliases": "^3.9.1",
+    "@docusaurus/tsconfig": "^3.9.1",
+    "@docusaurus/types": "^3.9.1",
+    "@types/react": "^19.2.0",
+    "typescript": "5.9.3",
+    "webpack": "5.102.0"
   },
   "browserslist": {
     "production": [
