--- a/website/package.json
+++ b/website/package.json
@@ -38,6 +38,9 @@
     "typescript": "5.9.3",
     "webpack": "5.103.0"
   },
+  "resolutions": {
+    "@types/react": "^19.2.7"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
