Simplify scripts, remove coverage path fixing
Codecov is able to fix the coverage paths on its own

--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -17,13 +17,11 @@
     "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist",
     "release-build": "yarn build && yarn build:type",
     "check": "biome check --write",
-    "test:unit-coverage": "c8 mocha --no-warnings 'tests/**/*.spec.ts'",
-    "test:unit": "c8 --r lcov mocha --no-warnings 'tests/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js discordeno",
-    "test:unit:watch": "mocha --no-warnings --watch --parallel 'tests/**/*.spec.ts'",
-    "test:deno-unit": "deno -A ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/**/*.spec.ts'",
-    "test:bun-unit": "bun ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/**/*.spec.ts'",
-    "test:type": "tsc --noEmit",
-    "test:test-type": "tsc --project tests/tsconfig.json"
+    "test:unit": "c8 -r lcov mocha 'tests/**/*.spec.ts'",
+    "test:deno-unit": "deno -A npm:mocha 'tests/**/*.spec.ts'",
+    "test:bun-unit": "bun --bun mocha 'tests/**/*.spec.ts'",
+    "test:test-type": "tsc --project tests/tsconfig.json",
+    "test:type": "tsc --noEmit"
   },
   "dependencies": {
     "@discordeno/bot": "workspace:^",
