--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -17,10 +17,10 @@
     "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist",
     "release-build": "yarn build && yarn build:type",
     "check": "biome check --write",
-    "test:unit": "c8 -r lcov mocha 'tests/unit/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js bot",
+    "test:unit": "c8 -r lcov mocha 'tests/unit/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js gateway",
     "test:deno-unit": "deno -A npm:mocha 'tests/unit/**/*.spec.ts'",
     "test:bun-unit": "bun --bun mocha 'tests/unit/**/*.spec.ts'",
-    "test:integration": "c8 -r lcov mocha -t 15000 'tests/integration/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js bot",
+    "test:integration": "c8 -r lcov mocha -t 15000 'tests/integration/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js gateway",
     "test:test-type": "tsc --project tests/tsconfig.json",
     "test:type": "tsc --noEmit"
   },
