--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,7 +17,7 @@
     "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist",
     "release-build": "yarn build && yarn build:type",
     "check": "biome check --write",
-    "test:unit": "c8 -r lcov mocha 'tests/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js bot",
+    "test:unit": "c8 -r lcov mocha 'tests/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js types",
     "test:deno-unit": "deno -A npm:mocha 'tests/**/*.spec.ts'",
     "test:bun-unit": "bun --bun mocha 'tests/**/*.spec.ts'",
     "test:test-type": "tsc --project tests/tsconfig.json",
