--- a/.github/workflows/other-runtime-unit-test.yml
+++ b/.github/workflows/other-runtime-unit-test.yml
@@ -22,20 +22,12 @@ jobs:
         with:
           deno-version: 'v2.1.x'
       - run: yarn install --immutable
-      - name: Turbo Cache
-        id: turbo-cache
-        uses: actions/cache@v5
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
         with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-test:deno-unit-${{ inputs.package }}-${{ github.sha }}
-      - name: Build dist cache
-        if: steps.turbo-cache.outputs.cache-hit != 'true'
-        uses: actions/cache@v5
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-build-${{ github.sha }}
+          cache-prefix: turbo-cache-
       - name: Deno Unit Test
-        run: yarn test:deno-unit --cache-dir=".turbo" --filter=./packages/${{ inputs.package }}
+        run: yarn test:deno-unit --filter=./packages/${{ inputs.package }}
   bun-unit-test:
     name: Bun Unit Test
     runs-on: ubuntu-latest
@@ -49,18 +41,10 @@ jobs:
         with:
           bun-version: '1.1.42'
       - run: yarn install --immutable
-      - name: Turbo Cache
-        id: turbo-cache
-        uses: actions/cache@v5
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
         with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-test:bun-unit-${{ inputs.package }}-${{ github.sha }}
-      - name: Build dist cache
-        if: steps.turbo-cache.outputs.cache-hit != 'true'
-        uses: actions/cache@v5
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-build-${{ github.sha }}
+          cache-prefix: turbo-cache-
       - name: Bun Unit Test
-        run: yarn test:bun-unit --cache-dir=".turbo" --filter=./packages/${{ inputs.package }}
+        run: yarn test:bun-unit --filter=./packages/${{ inputs.package }}
         timeout-minutes: 1
