--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -22,21 +22,13 @@ jobs:
           node-version: 20
           cache: yarn
       - run: yarn install --immutable
-      - name: Turbo Cache
-        id: turbo-cache
-        uses: actions/cache@v5
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
         with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-test:e2e-${{ inputs.package }}-${{ github.sha }}
-      - name: Build dist cache
-        if: steps.turbo-cache.outputs.cache-hit != 'true'
-        uses: actions/cache@v5
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-build-${{ github.sha }}
+          cache-prefix: turbo-cache-
       - name: E2E Test
         if: ${{ inputs.event_name != 'pull_request' }}
-        run: yarn test:e2e --cache-dir=".turbo" --filter=./packages/${{ inputs.package }}
+        run: yarn test:e2e --filter=./packages/${{ inputs.package }}
         timeout-minutes: 5
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
