--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -4,12 +4,6 @@ permissions:
 on:
   push:
     branches: ['main']
-    paths:
-      - 'website/**'
-      - '.github/workflows/site.yml'
-      - 'typedoc.json'
-      - 'package.json'
-      - 'packages/**'
   pull_request:
   workflow_dispatch:
 
@@ -31,6 +25,15 @@ jobs:
             website/yarn.lock
       - name: yarn install (root)
         run: yarn install --immutable
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
+        with:
+          cache-prefix: turbo-cache-
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
+        with:
+          cache-prefix: turbo-cache-website-
+          server-port: 41231 # The default is 41230, but we use a different cache key so we need a different port
       - name: Build all pkg
         run: yarn release-build
       - name: Build docs
@@ -47,6 +50,8 @@ jobs:
       - name: Build website
         run: yarn build
         working-directory: ./website
+        env:
+          TURBO_API: http://localhost:41231
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
@@ -64,6 +69,10 @@ jobs:
             website/yarn.lock
       - name: yarn install (root)
         run: yarn install --immutable
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
+        with:
+          cache-prefix: turbo-cache-
       - name: Build all pkg
         run: yarn release-build
       - name: Build docs
