--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website",
   "version": "0.0.0",
+  "packageManager": "yarn@4.12.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -35,6 +36,7 @@
     "@docusaurus/tsconfig": "^3.9.2",
     "@docusaurus/types": "^3.9.2",
     "@types/react": "^19.2.7",
+    "turbo": "^2.7.2",
     "typescript": "5.9.3",
     "webpack": "5.104.1"
   },
