ci: Use turbo remote cache (#4666)
* Use a turbo remote cache server for CI

`rharkor/caching-for-turbo` uses github actions cache to provide a remote cache server for turbo, so we can use previuously created cache if available and requested by turbo, and this doesn't have the downside of having the cache growing indefinitely like with normal github actions cache as since the single caches are uploaded to the github actions cache, github can evict the old cache when it's not used or there is no space left.

Also add turbo to website so we can cache the build

* Use turbo for website build & build:doc

* fix typo, tubo -> turbo

---------

Co-authored-by: Skillz4Killz <23035000+Skillz4Killz@users.noreply.github.com>

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -4,12 +4,6 @@ permissions:
 on:
   push:
     branches: ['main']
-    paths:
-      - 'website/**'
-      - '.github/workflows/site.yml'
-      - 'typedoc.json'
-      - 'package.json'
-      - 'packages/**'
   pull_request:
   workflow_dispatch:
 
@@ -31,10 +25,19 @@ jobs:
             website/yarn.lock
       - name: yarn install (root)
         run: yarn install --immutable
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
+        with:
+          cache-prefix: turbo-cache-
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
+        with:
+          cache-prefix: turbo-cache-website-
+          server-port: 41231 # The default is 41230, but we use a different cache key so we need a different port
       - name: Build all pkg
         run: yarn release-build
       - name: Build docs
-        run: yarn build:doc
+        run: yarn turbo build:doc --single-package
       - run: yarn install --immutable
         working-directory: ./website
       - name: Restore bundler cache
@@ -45,8 +48,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-docusaurus-bundler-
       - name: Build website
-        run: yarn build
+        run: yarn turbo build
         working-directory: ./website
+        env:
+          TURBO_API: http://localhost:41231
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
@@ -64,10 +69,14 @@ jobs:
             website/yarn.lock
       - name: yarn install (root)
         run: yarn install --immutable
+      - name: Cache for Turbo
+        uses: rharkor/caching-for-turbo@v2.3.5
+        with:
+          cache-prefix: turbo-cache-
       - name: Build all pkg
         run: yarn release-build
       - name: Build docs
-        run: yarn build:doc
+        run: yarn turbo build:doc --single-package
       - run: yarn install --immutable
         working-directory: ./website
       - run: yarn typecheck
