--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -17,14 +17,12 @@
     "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist",
     "release-build": "yarn build && yarn build:type",
     "check": "biome check --write",
-    "test:unit-coverage": "c8 mocha --no-warnings 'tests/unit/**/*.spec.ts'",
-    "test:unit": "c8 --r lcov mocha --no-warnings 'tests/unit/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js discordeno",
-    "test:unit:watch": "mocha --no-warnings --watch --parallel 'tests/unit/**/*.spec.ts'",
-    "test:deno-unit": "deno -A ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/unit/**/*.spec.ts'",
-    "test:bun-unit": "bun ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/unit/**/*.spec.ts'",
-    "test:e2e": "c8 --r lcov mocha --no-warnings --jobs 1 --t 30000 'tests/e2e/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js rest",
-    "test:type": "tsc --noEmit",
-    "test:test-type": "tsc --project tests/tsconfig.json"
+    "test:unit": "c8 -r lcov mocha 'tests/unit/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js bot",
+    "test:deno-unit": "deno -A npm:mocha 'tests/unit/**/*.spec.ts'",
+    "test:bun-unit": "bun --bun mocha 'tests/unit/**/*.spec.ts'",
+    "test:e2e": "c8 -r lcov mocha -t 30000 'tests/e2e/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js bot",
+    "test:test-type": "tsc --project tests/tsconfig.json",
+    "test:type": "tsc --noEmit"
   },
   "dependencies": {
     "@discordeno/gateway": "workspace:^",
