chore(.vscode): use unix path for typescript tsdk
While windows accepts both (or gets normalized, i don't actually know), Linux does not

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "*.ts": "typescript",
     "*.js": "javascript"
   },
-  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.tsdk": "node_modules/typescript/lib",
   "[json]": {
     "editor.defaultFormatter": "biomejs.biome",
     "editor.quickSuggestions": {
